# zivo

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  NOTICE.txt  README.ja.md  README.md  pyproject.toml
.github/workflows/: benchmark.yml  python-ci.yml  release.yml
docs/: architecture.en.md  architecture.md  commands.ja.md  commands.md  configuration.ja.md  configuration.md  custom-actions.ja.md  custom-actions.md  keybindings.ja.md  keybindings.md  performance.en.md  performance.md  platforms.ja.md  platforms.md  release-checklist.md  safety.ja.md  safety.md  spec_mvp.en.md  spec_mvp.md
scripts/: benchmark_current_pane_projection.py  benchmark_directory_listing.py  generate_readme_screenshots.py  run_benchmarks.sh
src/peneo/: __main__.py  app.py  app.tcss  app_runtime.py  app_shell.py  archive_utils.py  readme_screenshots.py  theme_support.py
src/peneo/adapters/: __init__.py  external_launcher.py  file_operations.py  filesystem.py
src/peneo/models/: __init__.py  config.py  file_operations.py  shell_command.py  shell_data.py
src/peneo/services/: __init__.py  archive_list.py  browser_snapshot.py  clipboard_operations.py  config.py  directory_size.py  file_mutations.py  file_search.py  grep_search.py  logging.py  shell_command.py  trash_operations.py  undo_operations.py  zip_compress.py
src/peneo/state/: __init__.py  actions.py  command_palette.py  effects.py  input.py  models.py  reducer.py  reducer_common.py  reducer_mutations.py  reducer_navigation.py  reducer_palette.py  reducer_terminal_config.py  selectors.py
src/peneo/ui/: __init__.py  attribute_dialog.py  command_palette.py  help_bar.py  panes.py  shell_command_dialog.py  split_terminal.py  tab_bar.py
src/plain/: __init__.py  __main__.py  app.py
src/plain/adapters/: __init__.py  external_launcher.py  file_operations.py  filesystem.py
src/plain/models/: __init__.py  external_launch.py  file_operations.py  shell_data.py
src/plain/services/: __init__.py  browser_snapshot.py  clipboard_operations.py  external_launcher.py  file_mutations.py
src/plain/state/: __init__.py  actions.py  command_palette.py  effects.py  input.py  models.py  reducer.py  selectors.py
src/plain/ui/: __init__.py  command_palette.py  conflict_dialog.py  help_bar.py  input_bar.py  panes.py  status_bar.py  summary_bar.py
src/zivo/: __init__.py  __main__.py  app.py  app.tcss  app_runtime.py  app_runtime_actions.py  app_runtime_execution.py  app_runtime_search.py  app_shell.py  archive_utils.py  windows_paths.py
src/zivo/adapters/: __init__.py  external_launcher.py  file_operations.py  filesystem.py
src/zivo/models/: __init__.py  config.py  custom_action.py  external_launch.py  file_operations.py  shell_data.py
src/zivo/services/: __init__.py  archive_extract.py  archive_list.py  attribute_inspection.py  browser_snapshot.py  clipboard_operations.py  config.py  custom_actions.py  directory_size.py  external_launcher.py  file_mutations.py  file_search.py  grep_search.py  logging.py  shell_command.py  split_terminal.py  text_replace.py  trash_operations.py  undo_operations.py  zip_compress.py
src/zivo/state/: __init__.py  (+46 more)
tests/: benchmark_fixtures.py  benchmark_utils.py  input_dispatch_browsing_cases.py  input_dispatch_dialogs_cases.py  input_dispatch_helpers.py  input_dispatch_palette_cases.py  state_selectors_cases.py  state_test_helpers.py  test_adapters_file_operations.py  test_adapters_filesystem.py  test_app.py  test_app_runtime.py  test_archive_utils.py  test_benchmarks.py  test_cli.py  test_command_palette.py  test_entrypoint.py  test_input_dispatch.py  test_input_dispatch_transfer.py  test_readme_screenshots.py  test_services_archive_extract.py  test_services_archive_list.py  test_services_browser_snapshot.py  test_services_clipboard_operations.py  test_services_config.py  test_services_custom_actions.py  test_services_directory_size.py  test_services_external_launcher.py  test_services_file_mutations.py  test_services_file_search.py  test_services_grep_search.py  test_services_logging.py  test_services_shell_command.py  test_services_split_terminal.py  test_services_text_replace.py  test_services_trash_operations.py  test_services_undo_operations.py  test_services_zip_compress.py  test_shell_command_feature.py  test_state_reducer.py  (+14 more)
(+39 files in other folders)
