[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "zivo"
version = "0.14.0"
description = "zivo is a simple and intuitive TUI file manager that lets you browse, search, and operate files without memorizing commands — a Zero-friction Interface for Viewing & Operations."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "pyte>=0.8.2",
  "send2trash>=1.8.3",
  "textual>=0.70,<1.0",
]

authors = [
  { name = "devgamesan", email = "devgamesan@gmail.com" }
]

keywords = ["tui", "file-manager", "textual", "terminal", "console"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Filesystems",
  "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/devgamesan/zivo"
Documentation = "https://github.com/devgamesan/zivo#readme"
Issues = "https://github.com/devgamesan/zivo/issues"
CI = "https://github.com/devgamesan/zivo/actions"

[project.scripts]
zivo = "zivo.__main__:main"

[dependency-groups]
dev = [
  "pip-licenses>=4.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/zivo"]
artifacts = ["src/zivo/**/*.tcss"]
